# tmcd-python

./: .gitignore  pyproject.toml
book/: _config.yml  _toc.yml
book/_build/.doctrees/: environment.pickle  index.doctree
book/_build/.doctrees/content/: AM.doctree  CDI.doctree
book/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
book/_build/html/_sources/: index.ipynb
book/_build/html/_sources/content/: AM.ipynb  CDI.ipynb
book/_build/html/content/: AM.html  CDI.html
book/_build/jupyter_execute/: index.ipynb
book/_build/jupyter_execute/content/: AM.ipynb  CDI.ipynb
book/content/: AM.ipynb  CDI.ipynb
